--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "webpackori",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1"
+  }
 }
