--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
+  },
+  "devDependencies": {
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
   }
 }
