--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "eslint": "^5.13.0",
+    "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "react-hot-loader": "^4.6.5",
