--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
+    "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-standard": "^18.2.0",
+    "stylelint-prettier": "^1.0.6",
     "stylelint-scss": "^3.5.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
