--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.3",
     "node-sass": "^4.11.0",
     "prettier": "1.16.4",
     "sass-loader": "^7.1.0",
@@ -42,5 +44,16 @@
   },
   "resolutions": {
     "ajv": "6.8.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
