--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "stylelint-config-standard": "^18.2.0",
     "stylelint-prettier": "^1.0.6",
     "stylelint-scss": "^3.5.3",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
