--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-hot-loader": "^4.6.5"
+    "react-dom": "^16.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -34,6 +33,7 @@
     "lint-staged": "^8.1.3",
     "node-sass": "^4.11.0",
     "prettier": "1.16.4",
+    "react-hot-loader": "^4.6.5",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
