--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "stylelint": "stylelint src/**/*.*"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "json-server": "^0.14.2",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react-dom": "^16.8.1",
+    "regenerator-runtime": "^0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
