--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --hot --mode development --open",
+    "start": "json-server --watch db.json webpack-dev-server --hot --mode development --open",
     "build": "webpack --config webpack.config.js",
     "eslint": "eslint \"src/**/*.{js,jsx}\"",
     "stylelint": "stylelint src/**/*.*"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "json-server": "^0.14.2",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "regenerator-runtime": "^0.13.1"
+    "react-dom": "^16.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -33,6 +31,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
+    "json-server": "^0.14.2",
     "lint-staged": "^8.1.3",
     "node-sass": "^4.11.0",
     "prettier": "1.16.4",
