--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react": "16.8.2",
+    "react-dom": "16.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -49,7 +49,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "resolutions": {
-    "ajv": "6.8.1"
+    "ajv": "6.9.1"
   },
   "husky": {
     "hooks": {
